Bug 331031 - Use platform build configurations Bug 317229 - Multiple build config refs per configuration